(lang dune 2.7)
(name "bibliotek")
(version 1.0.0)

(source (github jdrprod/bibliotek))
(license MIT)
(authors "Arthur Correnson")
(maintainers "arthur.correnson@ens-rennes.fr")

(generate_opam_files true)

(package
  (name "bibliotek")
  (synopsis "pdf manager app")
  (description "pdf manager app"))
